k8s-manifests/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosg-webapp-blue
  namespace: app
  labels:
    app: web
    deploy: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      deploy: blue
  template:
    metadata:
      labels:
        app: web
        deploy: blue
    spec:
      containers:
      - name: app-blue
        image: 924841524423.dkr.ecr.eu-west-1.amazonaws.com/k8s_sm:v1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
