k8s-manifests/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosg-webapp
  namespace: app
  labels:
    deploy: green
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      deploy: green
      app: web
  template:
    metadata:
      labels:
        deploy: green
        app: web
    spec:
      containers:
      - name: app
        image: 924841524423.dkr.ecr.eu-west-1.amazonaws.com/k8s_sm:v1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
