k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  selector:
    deploy: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
